# anturix

./: .gitignore  bun.lockb  bunfig.toml  codama.json  package.json  server.js  vercel.json  vite.config.ts  wrangler.jsonc
anchor/programs/anturix/: Cargo.toml
anchor/programs/anturix/src/: errors.rs  events.rs  lib.rs  pyth.rs
anchor/programs/anturix/src/instructions/: create_duel.rs  join_pool.rs  mod.rs  resolve_duel.rs
anchor/programs/anturix/src/state/: duel.rs  mod.rs
anchor/programs/anturix/tests/: helpers.rs  test_conditions.rs  test_lifecycle.rs  test_parimutuel.rs  test_pyth_duel.rs  test_validation.rs
api/: [[...all]].ts
src/: routeTree.gen.ts  styles.css
src/components/arena/: MarketBuilderModal.tsx
src/components/bet/: CreateBetModal.tsx
src/components/feed/: BanterChat.tsx  DuelCard.tsx  ExpertLockCard.tsx  PokerPoolCard.tsx  PullToRefresh.tsx  SwipeableCard.tsx
src/components/gamification/: AchievementToast.tsx  RankSystem.tsx
src/components/layout/: AnimatedOutlet.tsx  BottomTabBar.tsx  MainLayout.tsx  Navbar.tsx  RightSidebar.tsx  Sidebar.tsx
src/components/ui/: button.tsx
src/components/wallet/: WalletConnectModal.tsx  WalletConnectPrompt.tsx  WalletDropdown.tsx
src/contexts/: ThemeContext.tsx  WalletContext.tsx
src/data/: mockData.ts
src/idl/: anturix.json
src/lib/: arena.ts
src/routes/: __root.tsx  arena.tsx  calendar.tsx  duel.$duelId.tsx  feed.tsx  friends.tsx  index.tsx  leaderboard.tsx  marketplace.tsx  profile.tsx  search.tsx  settings.tsx
src/services/: duelContract.ts  solana.ts
src/types/: anturix.ts
